// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<a
  className="hotspot-item"
  href="#"
  onClick={[Function]}
>
  <div
    className="little-spacer-left text-bold"
  >
    '3' is a magic number.
  </div>
  <div
    className="display-flex-center big-spacer-top"
  >
    <QualifierIcon
      qualifier="FIL"
    />
    <div
      className="little-spacer-left hotspot-box-filename text-ellipsis"
      title="com.github.kevinsawicki.http.HttpRequest"
    >
      com.github.kevinsawicki.http.HttpRequest
    </div>
  </div>
</a>
`;

exports[`should render correctly 2`] = `
<a
  className="hotspot-item highlight"
  href="#"
  onClick={[Function]}
>
  <div
    className="little-spacer-left text-bold cursor-pointer"
    onClick={[Function]}
    role="button"
  >
    '3' is a magic number.
  </div>
  <div
    className="display-flex-center big-spacer-top"
  >
    <QualifierIcon
      qualifier="FIL"
    />
    <div
      className="little-spacer-left hotspot-box-filename text-ellipsis"
      title="com.github.kevinsawicki.http.HttpRequest"
    >
      com.github.kevinsawicki.http.HttpRequest
    </div>
  </div>
  <LocationsList
    isCrossFile={false}
    locations={Array []}
    onLocationSelect={[Function]}
    scroll={[MockFunction]}
    uniqueKey="01fc972e-2a3c-433e-bcae-0bd7f88f5123"
  />
</a>
`;
